# MailClient

./: .gitignore  CHANGELOG.md  composer.html  create-icon.ps1  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: BACKEND_API_SPEC.md
scripts/: build.ps1  build.sh
src/: App.css  App.tsx  ComposerWindow.tsx  composer-main.tsx  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: analyzer.rs  anthropic.rs  categorizer.rs  day_agent.rs  local.rs  mod.rs  ollama.rs  openai.rs  provider.rs  tools.rs
src-tauri/src/autoconfig/: mod.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/caldav/: client.rs
src-tauri/src/carddav/: client.rs
src-tauri/src/cloud/: auth.rs  crypto.rs  mod.rs  sync.rs
src-tauri/src/imap/: client.rs
src-tauri/src/jmap/: client.rs
src-tauri/src/sieve/: client.rs
src-tauri/src/smtp/: client.rs
src-tauri/src/storage/: mod.rs
src/api/: jmap.ts
src/components/: AIChatPanel.tsx  AISettings.tsx  AccountMenu.tsx  AccountSettings.tsx  AccountSidebar.tsx  CalendarView.tsx  CategoryManager.tsx  CategoryTabs.tsx  Composer.tsx  ConnectionForm.tsx  ContactsView.tsx  ContextMenu.tsx  DayAgentPanel.tsx  EmailAIPanel.tsx  EmailList.tsx  EmailView.tsx  EventDialog.tsx  FolderList.tsx  JmapSieveEditor.tsx  LoginDialog.tsx  MainNavigation.tsx  NotesView.tsx  PremiumUpgrade.tsx  RichTextEditor.tsx  SieveEditor.tsx  SignatureManager.tsx  SpamReviewDialog.tsx  TasksView.tsx  UnifiedFolderTree.tsx  (+2 more)
(+9 files in other folders)
